# spidev-test

./: CMakeLists.txt
